# aws-bedrock-pocs

./: README.md  pyproject.toml
bedrock_outfit_agent_assistant/: README.md  template.yaml
bedrock_outfit_agent_assistant/func_agent/: app.py  coordinates_finder.py
bedrock_outfit_agent_assistant/tests/: lambda_event_location.json  lambda_event_time.json  lambda_event_weather.json
bedrock_simple_agent_demo/: README.md
not_organized/: bedrock_retrieve_generate_kb.py  get_bedrock_kb_details.py  temp.py
rag_spells_simple/: demo.py
